--- a/material/index.html
+++ b/material/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="docsApp" ng-controller="DocsCtrl" lang="en" ng-strict-di >
 <head>
-<base href="/material/">
+<base href="/angularDoc/material/">
 <title ng-bind="'Angular Material - ' + menu.currentSection.name +
     (menu.currentSection === menu.currentPage ? '' : ' > ' + menu.currentPage.name)">
   Angular Material
